--- a/Wins/SettingsWin.xaml
+++ b/Wins/SettingsWin.xaml
@@ -44,5 +44,16 @@
 
         <Button Grid.Row="1" Grid.Column="0" Margin="5" Content="{Binding Source={x:Static consts:SettingsConst.ColorsButtonContent}}" ToolTip="{Binding Source={x:Static consts:SettingsConst.ColorsButtonToolTip}}"
                 Click="ColorsButton_Click" />
+
+        <Button Grid.Row="1" Grid.Column="1" Margin="5" d:Content="# # # #" ToolTip="{Binding Source={x:Static consts:SettingsConst.WeightsButtonToolTip}}"
+                Click="WeightsButton_Click">
+            <Button.Content>
+                <Binding Path="IsLightWeight">
+                    <Binding.Converter>
+                        <convs:SettingsWeightsButtonContentConv />
+                    </Binding.Converter>
+                </Binding>
+            </Button.Content>
+        </Button>
     </Grid>
 </Window>
